pkg/manifests/assets/router/deployment.yaml
# Deployment with default values
# Ingress Controller specific values are applied at runtime.
#
# Methods hashableDeployment() and deploymentConfigChanged()
# must be updated when adding new fields to this manifest.
kind: Deployment
apiVersion: apps/v1
# name and namespace are set at runtime.
spec:
  progressDeadlineSeconds: 600
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
    spec:
      # manually configure the service account, so we can configure it only in the router container.
      automountServiceAccountToken: false
      serviceAccountName: router
      # nodeSelector is set at runtime.
      priorityClassName: system-cluster-critical
      shareProcessNamespace: true
      containers:
        - name: router
          # image is set at runtime.
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
          terminationMessagePolicy: FallbackToLogsOnError
          # Merged at runtime.
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 1936
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            terminationGracePeriodSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz/ready
              port: 1936
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 120
            httpGet:
              path: /healthz/ready
              port: 1936
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
          volumeMounts:
          - mountPath: /var/lib/haproxy
            name: haproxy-config
          - mountPath: /etc/pki/tls/private
            name: default-certificate
            readOnly: true
          - mountPath: /var/run/configmaps/service-ca
            name: service-ca-bundle
            readOnly: true
          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            name: kube-api-access
            readOnly: true
      tolerations:
      # Ensure the pod isn't deleted during serial NoExecuteTaintManager tests.
      # Remember that NoExecute uses Delete, not Evict, because removing the pod
      # is non-optional.  This means that PDBs are not honored.
      - key: "kubernetes.io/e2e-evict-taint-key"
        operator: "Equal"
        value: "evictTaintVal"
        effect: "NoExecute"
      volumes:
      - name: default-certificate
        secret:
          defaultMode: 420
          # SecretName is set at run-time.
      - name: haproxy-config
        emptyDir: {}
      - name: service-ca-bundle
        configMap:
          defaultMode: 420
          items:
          - key: service-ca.crt
            path: service-ca.crt
          name: service-ca-bundle
          optional: false
      - name: kube-api-access
        projected:
          defaultMode: 0400
          sources:
          - serviceAccountToken:
              expirationSeconds: 3600
              path: token
          - configMap:
              name: kube-root-ca.crt
              items:
              - key: ca.crt
                path: ca.crt
          - downwardAPI:
              items:
              - path: namespace
                fieldRef:
                  fieldPath: metadata.namespace
