pkg/manifests/assets/router/service-cloud.yaml
# Load Balancer Service to place in front of the router in cloud environments.
# Ingress Controller specific values are applied at runtime.
kind: Service
apiVersion: v1
metadata:
  # Name is set at runtime.
  namespace: openshift-ingress
  labels:
    app: router
spec:
  type: LoadBalancer
  selector:
    app: router
  # This also has the effect of marking LB pool targets as unhealthy when no
  # router pods are present on a node behind the service.
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: https
